Added some testing and the fuzzy string stuff

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive --exit"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "fuzzy-matching": "^0.4.3",
     "mongoose": "^6.2.4",
     "nodemon": "^2.0.15"
   }
