--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.3",
     "fuzzy-matching": "^0.4.3",
     "mongoose": "^6.2.4",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15"
   }
 }
